--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ authors = ["james@koonts.net"]
 license = "MIT"
 
 [dependencies]
+clap = { version = "4.5.21", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
