--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,5 @@ tokio = { version = "1", features = ["full"] }
 whoami = "2.0.0-pre.0"
 anyhow = "1.0.94"
 rusqlite = "0.34.0"
+env_logger = "0.11.7"
+log = "0.4.22"
