--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "phantom_ci"
-version = "0.1.7"
+version = "0.2.0"
 edition = "2021"
 description = "Secure Headless Self-Hosted Runner"
 keywords = ["self-hosted", "git", "scm", "cicd"]
@@ -8,17 +8,17 @@ authors = ["james@koonts.net"]
 license = "MIT"
 
 [dependencies]
-anyhow = "1"
-chrono = "0.4"
-clap = { version = "4", features = ["derive"] }
-config = "0.15"
+anyhow = "1.0.100"
+chrono = "0.4.42"
+clap = { version = "4.5.54", features = ["derive"] }
+config = "0.15.19"
 discord-webhook-lib = "0.2.3"
 dotenv = "0.15"
-env_logger = "0.11"
-log = "0.4"
-rand = "0.9"
-rusqlite = "0.37"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-tokio = { version = "1", features = ["full"] }
-whoami = "2.0.0-pre.3"
+env_logger = "0.11.8"
+log = "0.4.29"
+rand = "0.9.2"
+rusqlite = "0.38.0"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
+tokio = { version = "1.49.0", features = ["full"] }
+whoami = "2.0.1"
