--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,4 +69,4 @@ jobs:
         with:
           files: ${{ env.TAR_PATH }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.REL_TOKEN }}
