--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,13 +10,47 @@ permissions:
   contents: write
 
 jobs:
+  release:
+    name: Create Release Entry
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
+    outputs:
+      tag_name: ${{ steps.version.outputs.tag }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Get version
+        id: version
+        shell: bash
+        run: |
+          if [[ "${GITHUB_REF}" == refs/tags/* ]]; then
+            TAG="${GITHUB_REF_NAME}"
+          else
+            VERSION=$(grep "^version =" Cargo.toml | head -1 | cut -d '"' -f 2)
+            TAG="v${VERSION}"
+          fi
+          echo "tag=${TAG}" >> $GITHUB_OUTPUT
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ steps.version.outputs.tag }}
+          name: Release ${{ steps.version.outputs.tag }}
+          generate_release_notes: true
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   build:
     name: Build ${{ matrix.os }}
+    needs: release
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, macos-13]
 
     steps:
       - name: Checkout
@@ -42,9 +76,14 @@ jobs:
         run: |
           set -euo pipefail
           BIN_NAME="phantom_ci"
-          VERSION="${GITHUB_REF_NAME}"
+          VERSION="${{ needs.release.outputs.tag_name }}"
           OUT_DIR="dist"
           mkdir -p "$OUT_DIR"
+
+          # Strip the binary to reduce size
+          if [[ "${RUNNER_OS}" != "Windows" ]]; then
+            strip "target/release/${BIN_NAME}"
+          fi
 
           # Copy the built binary
           cp "target/release/${BIN_NAME}" "$OUT_DIR/${BIN_NAME}"
@@ -61,12 +100,20 @@ jobs:
 
           ARCHIVE_NAME="${BIN_NAME}-${VERSION}-${OS_LABEL}-${ARCH}.tar.gz"
           (cd "$OUT_DIR" && tar -czf "$ARCHIVE_NAME" "$BIN_NAME")
-          echo "TAR_PATH=${OUT_DIR}/${ARCHIVE_NAME}" >> "$GITHUB_ENV"
+          
+          # Generate checksum
+          (cd "$OUT_DIR" && if command -v sha256sum >/dev/null 2>&1; then
+            sha256sum "$ARCHIVE_NAME" > "${ARCHIVE_NAME}.sha256"
+          else
+            shasum -a 256 "$ARCHIVE_NAME" > "${ARCHIVE_NAME}.sha256"
+          fi)
 
       - name: Upload asset to GitHub Release
-        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
         with:
-          files: ${{ env.TAR_PATH }}
+          tag_name: ${{ needs.release.outputs.tag_name }}
+          files: |
+            dist/*.tar.gz
+            dist/*.sha256
         env:
-          GITHUB_TOKEN: ${{ secrets.REL_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
